navigation with History API

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
       loading&hellip;
     </div>
     <div id="tv-treeControl" style="display: none;">
-      <input type="button" id="tv-backToPackage" value="back to package">
+      <input type="button" id="tv-backToOwner" value="back to owner">
       <input type="button" id="tv-expandAll" value="expand all">
       <input type="button" id="tv-collapseAll" value="collapse all">
       <input type="checkbox" id="tv-showTypes" name="showTypes">
